<resources>
    <string name="app_name">Vsis3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VSIS</string>
    <string name="nav_header_subtitle">vsis.test@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Informações</string>
    <string name="edit">Editar</string>
    <string name="excluir">Excluir</string>

    <string name="login_title">Login</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="login_btn">Login</string>
    <string name="login_add">Cadastre-se</string>

    <string name="cadUser_btnCad">CADASTRAR</string>
    <string name="cadUser_btnCanc">CANCELAR</string>

    <string name="addUser_title">Cadastro de Usuário</string>


    <string name="menu_inicio">Início</string>
    <string name="menu_listarequipe">Listar Equipe</string>
    <string name="menu_addmember">Adicionar Novo Membro</string>
    <string name="name">Nome</string>
    <string name="role">Função</string>
    <string name="btnAdd">Adicionar</string>
</resources>